--- a/8.instruct pix2pix/train.ipynb
+++ b/8.instruct pix2pix/train.ipynb
@@ -423,17 +423,17 @@
     "# unet = UNet2DConditionModel.from_pretrained(checkpoint, subfolder='unet')\n",
     "\n",
     "# #修改unet.conv_in层的形状\n",
-    "# unet.register_to_config(in_channels=8)\n",
-    "# with torch.no_grad():\n",
-    "#     new_conv_in = torch.nn.Conv2d(8, 320, 3, 1, 1)\n",
-    "#     new_conv_in.weight.zero_()\n",
-    "#     new_conv_in.weight[:, :4, :, :].copy_(unet.conv_in.weight)\n",
-    "#     unet.conv_in = new_conv_in\n",
-    "# print(unet.config.in_channels)\n",
+    "unet.register_to_config(in_channels=8)\n",
+    "with torch.no_grad():\n",
+    "    new_conv_in = torch.nn.Conv2d(8, 320, 3, 1, 1)\n",
+    "    new_conv_in.weight.zero_()\n",
+    "    new_conv_in.weight[:, :4, :, :].copy_(unet.conv_in.weight)\n",
+    "    unet.conv_in = new_conv_in\n",
+    "print(unet.config.in_channels)\n",
     "\n",
-    "encoder = CLIPTextModel.from_pretrained('./save', subfolder='text_encoder')\n",
-    "vae = AutoencoderKL.from_pretrained('./save', subfolder='vae')\n",
-    "unet = UNet2DConditionModel.from_pretrained('./save', subfolder='unet')\n",
+    "# encoder = CLIPTextModel.from_pretrained('./save', subfolder='text_encoder')\n",
+    "# vae = AutoencoderKL.from_pretrained('./save', subfolder='vae')\n",
+    "# unet = UNet2DConditionModel.from_pretrained('./save', subfolder='unet')\n",
     "\n",
     "\n",
     "def print_model_size(name, model):\n",
