--- a/8.instruct pix2pix/train.ipynb
+++ b/8.instruct pix2pix/train.ipynb
@@ -418,9 +418,9 @@
     "from transformers import CLIPTextModel\n",
     "\n",
     "#加载3个模型\n",
-    "# encoder = CLIPTextModel.from_pretrained(checkpoint, subfolder='text_encoder')\n",
-    "# vae = AutoencoderKL.from_pretrained(checkpoint, subfolder='vae')\n",
-    "# unet = UNet2DConditionModel.from_pretrained(checkpoint, subfolder='unet')\n",
+    "encoder = CLIPTextModel.from_pretrained(checkpoint, subfolder='text_encoder')\n",
+    "vae = AutoencoderKL.from_pretrained(checkpoint, subfolder='vae')\n",
+    "unet = UNet2DConditionModel.from_pretrained(checkpoint, subfolder='unet')\n",
     "\n",
     "# #修改unet.conv_in层的形状\n",
     "unet.register_to_config(in_channels=8)\n",
