--- a/5.lora dream booth/train.ipynb
+++ b/5.lora dream booth/train.ipynb
@@ -3,6 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "02623ad8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#全局常量\n",
+    "repo_id = 'lansinuote/diffusion.3.dream_booth'\n",
+    "checkpoint = 'runwayml/stable-diffusion-v1-5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "315ad307",
    "metadata": {},
    "outputs": [
@@ -10,71 +22,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration lansinuote--diffusion.3.dream_boothimages-73d13cf74f9b46f0\n",
-      "Found cached dataset parquet (/root/.cache/huggingface/datasets/lansinuote___parquet/lansinuote--diffusion.3.dream_boothimages-73d13cf74f9b46f0/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n"
+      "Using custom data configuration lansinuote--diffusion.3.dream_booth-4344a7d7501be7f1\n",
+      "Found cached dataset parquet (/root/.cache/huggingface/datasets/lansinuote___parquet/lansinuote--diffusion.3.dream_booth-4344a7d7501be7f1/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(Dataset({\n",
-       "     features: ['image'],\n",
+       "     features: ['image', 'text'],\n",
        "     num_rows: 5\n",
        " }),\n",
-       " {'image': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=2469x2558>})"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from datasets import load_dataset\n",
-    "\n",
-    "#直接使用我处理好的数据集\n",
-    "dataset = load_dataset(path='lansinuote/diffusion.3.dream_boothimages',\n",
-    "                       split='train')\n",
-    "\n",
-    "dataset, dataset[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "2af94061",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Dataset({\n",
-       "     features: ['image'],\n",
-       "     num_rows: 5\n",
-       " }),\n",
-       " {'image': tensor([[[ 0.7804,  0.7647,  0.7725,  ...,  0.7647,  0.7725,  0.7725],\n",
-       "           [ 0.7569,  0.7725,  0.7725,  ...,  0.7647,  0.7569,  0.7569],\n",
-       "           [ 0.7725,  0.7725,  0.7647,  ...,  0.7725,  0.7647,  0.7647],\n",
-       "           ...,\n",
-       "           [ 0.7098,  0.6941,  0.7020,  ...,  0.7098,  0.7098,  0.7020],\n",
-       "           [ 0.7020,  0.7176,  0.7098,  ...,  0.7020,  0.7176,  0.7098],\n",
-       "           [ 0.7176,  0.7333,  0.7098,  ...,  0.7020,  0.7176,  0.7020]],\n",
-       "  \n",
-       "          [[-0.1451, -0.1608, -0.1529,  ..., -0.1529, -0.1373, -0.1373],\n",
-       "           [-0.1686, -0.1529, -0.1529,  ..., -0.1529, -0.1529, -0.1529],\n",
-       "           [-0.1529, -0.1529, -0.1608,  ..., -0.1216, -0.1294, -0.1451],\n",
-       "           ...,\n",
-       "           [-0.2627, -0.2784, -0.2706,  ..., -0.2314, -0.2314, -0.2392],\n",
-       "           [-0.2706, -0.2549, -0.2627,  ..., -0.2392, -0.2235, -0.2314],\n",
-       "           [-0.2549, -0.2392, -0.2627,  ..., -0.2392, -0.2235, -0.2314]],\n",
-       "  \n",
-       "          [[-0.6314, -0.6471, -0.6392,  ..., -0.6392, -0.6235, -0.6235],\n",
-       "           [-0.6549, -0.6392, -0.6392,  ..., -0.6471, -0.6471, -0.6471],\n",
-       "           [-0.6392, -0.6392, -0.6471,  ..., -0.6471, -0.6471, -0.6392],\n",
-       "           ...,\n",
-       "           [-0.6627, -0.6784, -0.6706,  ..., -0.6471, -0.6471, -0.6549],\n",
-       "           [-0.6706, -0.6549, -0.6627,  ..., -0.6549, -0.6392, -0.6471],\n",
-       "           [-0.6549, -0.6392, -0.6627,  ..., -0.6549, -0.6392, -0.6549]]])})"
+       " {'image': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=2469x2558>,\n",
+       "  'text': 'a photo of little dog'})"
       ]
      },
      "execution_count": 2,
@@ -83,7 +43,46 @@
     }
    ],
    "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "#直接使用我处理好的数据集\n",
+    "dataset = load_dataset(path=repo_id, split='train')\n",
+    "\n",
+    "dataset, dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2af94061",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pixel_values torch.Size([3, 512, 512]) torch.float32\n",
+      "input_ids torch.Size([77]) torch.int64\n",
+      "attention_mask torch.Size([77]) torch.int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['image', 'text'],\n",
+       "    num_rows: 5\n",
+       "})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "import torchvision\n",
+    "from transformers import AutoTokenizer\n",
     "\n",
     "#数据增强\n",
     "compose = torchvision.transforms.Compose([\n",
@@ -94,30 +93,61 @@
     "    torchvision.transforms.Normalize([0.5], [0.5]),\n",
     "])\n",
     "\n",
+    "#文字编码\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint,\n",
+    "                                          subfolder='tokenizer',\n",
+    "                                          use_fast=False)\n",
+    "\n",
     "\n",
     "def f(data):\n",
-    "    image = [compose(i) for i in data['image']]\n",
-    "    return {'image': image}\n",
+    "    #图像编码\n",
+    "    pixel_values = compose(data['image'][0]).unsqueeze(dim=0)\n",
+    "\n",
+    "    #文字编码\n",
+    "    #77 = tokenizer.model_max_length\n",
+    "    tokens = tokenizer(data['text'][0],\n",
+    "                       truncation=True,\n",
+    "                       padding='max_length',\n",
+    "                       max_length=77,\n",
+    "                       return_tensors='pt')\n",
+    "\n",
+    "    return {\n",
+    "        'pixel_values': pixel_values,\n",
+    "        'input_ids': tokens.input_ids,\n",
+    "        'attention_mask': tokens.attention_mask\n",
+    "    }\n",
     "\n",
     "\n",
     "dataset = dataset.with_transform(f)\n",
     "\n",
-    "dataset, dataset[0]"
+    "for k, v in dataset[0].items():\n",
+    "    print(k, v.shape, v.dtype)\n",
+    "\n",
+    "dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c07c2a12",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pixel_values torch.Size([1, 3, 512, 512]) torch.float32\n",
+      "input_ids torch.Size([1, 77]) torch.int64\n",
+      "attention_mask torch.Size([1, 77]) torch.int64\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(5, torch.Size([1, 3, 512, 512]))"
+       "5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,22 +155,20 @@
    "source": [
     "import torch\n",
     "\n",
-    "def collate_fn(datas):\n",
-    "    image = [i['image'] for i in datas]\n",
-    "    return torch.stack(image, dim=0)\n",
-    "\n",
-    "\n",
     "loader = torch.utils.data.DataLoader(dataset,\n",
     "                                     batch_size=1,\n",
     "                                     shuffle=True,\n",
-    "                                     collate_fn=collate_fn)\n",
+    "                                     collate_fn=None)\n",
     "\n",
-    "len(loader), next(iter(loader)).shape"
+    "for k, v in next(iter(loader)).items():\n",
+    "    print(k, v.shape, v.dtype)\n",
+    "\n",
+    "len(loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e0459d36",
    "metadata": {},
    "outputs": [
@@ -157,8 +185,6 @@
    "source": [
     "from transformers.models.clip.modeling_clip import CLIPTextModel\n",
     "from diffusers import AutoencoderKL, UNet2DConditionModel\n",
-    "\n",
-    "checkpoint = 'runwayml/stable-diffusion-v1-5'\n",
     "\n",
     "encoder = CLIPTextModel.from_pretrained(checkpoint, subfolder='text_encoder')\n",
     "vae = AutoencoderKL.from_pretrained(checkpoint, subfolder='vae')\n",
@@ -180,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c13480bb",
    "metadata": {},
    "outputs": [
@@ -220,6 +246,16 @@
       "up_blocks.3.attentions.2.transformer_blocks.0.attn2.processor 320 768\n",
       "mid_block.attentions.0.transformer_blocks.0.attn1.processor 1280 None\n",
       "mid_block.attentions.0.transformer_blocks.0.attn2.processor 1280 768\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/anaconda3/envs/pt39/lib/python3.9/site-packages/diffusers/models/cross_attention.py:30: FutureWarning: Importing from cross_attention is deprecated. Please import from diffusers.models.attention_processor instead.\n",
+      "  deprecate(\n",
+      "/root/anaconda3/envs/pt39/lib/python3.9/site-packages/diffusers/models/cross_attention.py:58: FutureWarning: LoRACrossAttnProcessor is deprecated and will be removed in `0.18.0`. Please use `from diffusers.models.attention_processor import LoRAAttnProcessor instead.\n",
+      "  deprecate(\"cross_attention\", \"0.18.0\", deprecation_message, standard_warn=False)\n"
      ]
     }
    ],
@@ -268,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2690fbdf",
    "metadata": {},
    "outputs": [
@@ -278,7 +314,7 @@
        "32"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,26 +327,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c6f4b455",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(CLIPTokenizer(name_or_path='runwayml/stable-diffusion-v1-5', vocab_size=49408, model_max_length=77, is_fast=False, padding_side='right', truncation_side='right', special_tokens={'bos_token': AddedToken(\"<|startoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'eos_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'unk_token': AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True), 'pad_token': '<|endoftext|>'}),\n",
-       " DDPMScheduler {\n",
+       "(DDPMScheduler {\n",
        "   \"_class_name\": \"DDPMScheduler\",\n",
-       "   \"_diffusers_version\": \"0.12.1\",\n",
+       "   \"_diffusers_version\": \"0.15.1\",\n",
        "   \"beta_end\": 0.012,\n",
        "   \"beta_schedule\": \"scaled_linear\",\n",
        "   \"beta_start\": 0.00085,\n",
        "   \"clip_sample\": false,\n",
+       "   \"clip_sample_range\": 1.0,\n",
+       "   \"dynamic_thresholding_ratio\": 0.995,\n",
        "   \"num_train_timesteps\": 1000,\n",
        "   \"prediction_type\": \"epsilon\",\n",
+       "   \"sample_max_value\": 1.0,\n",
        "   \"set_alpha_to_one\": false,\n",
        "   \"skip_prk_steps\": true,\n",
        "   \"steps_offset\": 1,\n",
+       "   \"thresholding\": false,\n",
        "   \"trained_betas\": null,\n",
        "   \"variance_type\": \"fixed_small\"\n",
        " },\n",
@@ -328,18 +367,13 @@
        " MSELoss())"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from diffusers import DDPMScheduler\n",
-    "from transformers import AutoTokenizer\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(checkpoint,\n",
-    "                                          subfolder='tokenizer',\n",
-    "                                          use_fast=False)\n",
     "\n",
     "scheduler = DDPMScheduler.from_pretrained(checkpoint, subfolder='scheduler')\n",
     "\n",
@@ -351,46 +385,38 @@
     "\n",
     "criterion = torch.nn.MSELoss()\n",
     "\n",
-    "tokenizer, scheduler, optimizer, criterion"
+    "scheduler, optimizer, criterion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b3effea6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.0348, grad_fn=<MseLossBackward0>)"
+       "tensor(0.2743, grad_fn=<MseLossBackward0>)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def get_loss(data):\n",
-    "    device = data.device\n",
+    "    device = data['input_ids'].device\n",
     "\n",
-    "    #只需要input ids就可以了\n",
-    "    #全程都是一句话,其实只需要编码一次即可\n",
-    "    #77 = tokenizer.model_max_length\n",
-    "    input_ids = tokenizer('a photo of sks dog',\n",
-    "                          truncation=True,\n",
-    "                          padding='max_length',\n",
-    "                          max_length=77,\n",
-    "                          return_tensors='pt')['input_ids']\n",
-    "\n",
-    "    #编码文字,由于encoder不训练,其实这一步也可以只运算一次\n",
+    "    #编码文字\n",
     "    #[1, 77] -> [1, 77, 768]\n",
-    "    out_encoder = encoder(input_ids.to(device))[0]\n",
+    "    out_encoder = encoder(input_ids=data['input_ids'],\n",
+    "                          attention_mask=data['attention_mask'])[0]\n",
     "\n",
     "    #vae计算特征图\n",
     "    #[1, 3, 512, 512] -> [1, 4, 64, 64]\n",
-    "    out_vae = vae.encode(data).latent_dist.sample().detach()\n",
+    "    out_vae = vae.encode(data['pixel_values']).latent_dist.sample().detach()\n",
     "\n",
     "    #0.18215 = vae.config.scaling_factor\n",
     "    out_vae = out_vae * 0.18215\n",
@@ -415,12 +441,16 @@
     "    return criterion(out_unet, noise)\n",
     "\n",
     "\n",
-    "get_loss(torch.randn(1, 3, 512, 512))"
+    "get_loss({\n",
+    "    'pixel_values': torch.randn(1, 3, 512, 512),\n",
+    "    'input_ids': torch.ones(1, 77).long(),\n",
+    "    'attention_mask': torch.ones(1, 77).long()\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "13a8c245",
    "metadata": {},
    "outputs": [
@@ -428,26 +458,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.3670004606246948\n",
-      "20 10.45627648581285\n",
-      "40 9.188310690922663\n",
-      "60 7.809588600997813\n",
-      "80 9.303583267959766\n",
-      "100 11.15790241828654\n",
-      "120 7.788689624285325\n",
-      "140 10.951385688968003\n",
-      "160 7.679351598257199\n",
-      "180 8.150683714775369\n",
-      "200 10.188504346180707\n",
-      "220 8.693295795586891\n",
-      "240 6.545399873633869\n",
-      "260 8.477286474080756\n",
-      "280 10.255770185613073\n",
-      "300 7.34097321680747\n",
-      "320 7.778350460110232\n",
-      "340 7.739824238466099\n",
-      "360 8.069359936169349\n",
-      "380 6.185638143564574\n"
+      "0 0.47430265601724386\n",
+      "10 6.008332805009559\n",
+      "20 5.410161764128134\n",
+      "30 4.312515129800886\n",
+      "40 5.0653923387872055\n",
+      "50 4.800978829618543\n",
+      "60 4.101198305841535\n",
+      "70 3.55872066388838\n",
+      "80 5.382800737861544\n",
+      "90 3.1098747176583856\n",
+      "100 5.2366352655226365\n",
+      "110 3.251381019828841\n",
+      "120 6.391375361359678\n",
+      "130 3.4201086544198915\n",
+      "140 3.95328053063713\n",
+      "150 4.018299808958545\n",
+      "160 4.696397997322492\n",
+      "170 3.5135789506603032\n",
+      "180 4.713769806083292\n",
+      "190 3.8237785125384107\n"
      ]
     }
    ],
@@ -463,9 +493,11 @@
     "    unet.train()\n",
     "\n",
     "    loss_sum = 0\n",
-    "    for epoch in range(400):\n",
+    "    for epoch in range(200):\n",
     "        for i, data in enumerate(loader):\n",
-    "            loss = get_loss(data.to(device))\n",
+    "            for k in data.keys():\n",
+    "                data[k] = data[k].to(device)\n",
+    "            loss = get_loss(data)\n",
     "\n",
     "            loss.backward()\n",
     "            torch.nn.utils.clip_grad_norm_(lora_layers.parameters(), 1.0)\n",
@@ -474,7 +506,7 @@
     "\n",
     "            loss_sum += loss.item()\n",
     "\n",
-    "        if epoch % 20 == 0:\n",
+    "        if epoch % 10 == 0:\n",
     "            print(epoch, loss_sum)\n",
     "            loss_sum = 0\n",
     "\n",
@@ -487,9 +519,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:pt39]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-pt39-py"
   },
   "language_info": {
    "codemirror_mode": {
